Merged native benchmark into this repo